# ising

./: AUTHORS  configure  configure.ac
src/: Makefile.am  ising.c  ising.h  log.c  log.h  main.c
